# HackKosice-2024

./: .gitignore  .gitmodules  README.md  grml.yaml  package-lock.json  package.json  pyproject.toml  secret_manager.py  server.js
agents/: index.js  package-lock.json  package.json
agents/config/: db.js
backend/: Procfile  call.py  databackend.py  main.py  prompt_constants.py  query.py  rebuild.py  requirements.txt
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/authorize/: page.tsx
frontend/app/editor/: page.tsx
frontend/app/repositories/: page.tsx
tokenizer/: data.py  pickle_data.py  rebuild.py
